paperless-ngx/ing_paperless-ngx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  ingressClassName: nginx
  rules:
  - host: paperless.apps.klopfi.net
    http:
      paths:
      - backend:
          service:
            name: paperless-ngx
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - paperless.apps.klopfi.net
    secretName: wildcard-klopfi-net
